# pariaula12B-profs

./: .gitignore  CMakeLists.txt  README.md  teste.txt
doc/: Doxyfile.in  mainpage.dox
src/: auxcallbacks.c  callbacks.c  main.c  myf.c  myf.h  paridraw.glade  prototypes.h
